Working Delete & Edit.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script type="text/template" id="tpl-todo">
       <div class="media-heading">
         <h3>
-          <%- name %>
+          <%- name %> - <%- id %>
           <small>
             <a href="#todos/edit/<%- id %>"><span class="glyphicon glyphicon-pencil"><img src="images/edit-file.png" width="25px" ></span></a>
             <a href="#todos/delete/<%- id %>" class="delete-contract">
