--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <div class="form-group">
           <label class="col-sm-4 control-label">Description:</label>
           <div class="col-sm-6">
-            <textarea class="form-control contact-email-input"><%- description %> </textarea>
+            <textarea class="form-control todo-description" name="description" id="description"><%- description %> </textarea>
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-4 control-label">Completed?:</label>
+          <label class="col-sm-4 todo-completed-label">Completed?:</label>
           <div class="col-sm-6">
-            <input type="checkbox" id="completed" <% print( completed ?  'checked="checked"' : '') %> />
+            <input class="todo-completed" type="checkbox" id="completed" <% print( completed ?  'checked="checked"' : '') %> />
            <span class="text"><%- completed %></span>
           </div>
         </div>
